--- a/src/sass/_sideBar.scss
+++ b/src/sass/_sideBar.scss
@@ -1,5 +1,8 @@
 .sideBar{
     width: 306px;
+    background-color: white;
+    height: 1198px;
+    padding-top: 36px;
 }
 .logo {
   display: flex;
