--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,13 +1,14 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
-
+body{
+    height: 100%;
+  background-color: #EEEEEE;
+}
 .container {
     display: flex;
   margin: 0 auto;
-  background-color: var(--bg-color);
   width: 1400px;
-  height: 500px;
   font-family: 'Gothic A1', sans-serif;
-  padding-top: 40px;
+ 
   @media screen and (max-width: 768px) {
     max-width: 760px;
     margin: 0;
