--- a/src/sass/dashboard.scss
+++ b/src/sass/dashboard.scss
@@ -1,7 +1,6 @@
 .dashboard{
     width: 100%;
-    background-color: #EEEEEE;
-    height: 500px;
+    
     padding-left: 71px;
 }
 .title{
@@ -9,12 +8,14 @@
   font-weight: 500;
   font-style: normal;
   font-size: 24;
-
+margin: 0;
+padding: 41px 0 50px 0;
 }
 .info{
 border-radius: 15px;
 background-color: white;
 padding: 30px 38px;
+
 }
 .infoTitle{
     font-family: "Poppins", sans-serif;
@@ -29,5 +30,54 @@ padding: 30px 38px;
     font-style: normal;
     font-size: 14;
     color: #16C098;
-    margin: 0;
+    margin: 0 0 40px 0;
+}
+.table{
+    width: 100%;
+}
+.textList td{
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 14;  
+    border-bottom: 1px solid #EEEEEE;
+    padding-bottom: 20px;
+    padding-top: 20px;
+}
+.textList:first-child td{
+     color: #B5B7C0;
+}
+.btnAct{
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 14; 
+    width: 80px;
+    height: 29px;
+    border-radius: 4px;
+    background-color:#16C098 ;
+    color: #008767;
+    border-color: #008767;
+    cursor: pointer;
+}
+.pagBlock{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 32px 0 0 38px;
+    p{
+        color: #B5B7C0;
+    }
+}
+.pagination{
+    button{
+     padding: 5px 7px;
+        border-radius: 4px;
+        text-align: center;
+        border: none;
+        background-color: #F5F5F5;
+    }
+    button:not(:last-child){
+        margin-right: 12px;
+    }
 }
