--- a/src/partials/sideBar.html
+++ b/src/partials/sideBar.html
@@ -1,3 +1,5 @@
+
+
 <div class="sideBar">
   <div class="logo">
     <svg width="37" height="39" class="logo-icon">
@@ -44,4 +46,12 @@
       </svg>
     </li>
   </ul>
+  <div class="ava">
+    <img src="./images/ava.png" alt="">
+    <div>
+      <p class="ava-name">Evano</p>
+    <p class="ava-job">Project Manager</p>  
+    </div>
+    
+  </div>
 </div>
