--- a/src/partials/sideBar.html
+++ b/src/partials/sideBar.html
@@ -1,5 +1,71 @@
 
-
+<div class="burgerrrr">
+  <input type="checkbox" id="burger-toggle">
+    <label for="burger-toggle" class="burger">
+        <span></span>
+        <span></span>
+        <span></span>
+    </label>
+    <nav class="menu">
+      <div class="sideBarr">
+        <div class="logo">
+          <svg width="37" height="39" class="logo-icon">
+            <use href="./images/icon.svg#icon-iconLogo"></use>
+          </svg>
+          <div class="logoName">
+            <svg width="150" height="39" class="logo-icon">
+              <use href="./images/icon.svg#icon-logo"></use>
+            </svg>
+            <svg width="18" height="27" class="logo-icon">
+              <use href="./images/icon.svg#icon-v01"></use>
+            </svg>
+          </div>
+        </div>
+        <ul>
+          <li class="logo-list">
+            <svg width="114" height="24" class="logo-prod">
+              <use class="icon dash" href="./images/dash.svg#icon-dash"></use>
+            </svg>
+          </li>
+          <li class="logo-list">
+            <svg width="231" height="24" class="logo-prod">
+              <use class="icon dash" href="./images/dash.svg#icon-prod"></use>
+            </svg>
+          </li>
+          <li class="logo-list">
+            <svg width="231" height="24" class="logo-prod">
+              <use class="icon dash" href="./images/dash.svg#icon-cust"></use>
+            </svg>
+          </li>
+          <li class="logo-list">
+            <svg width="231" height="24" class="logo-prod">
+              <use class="icon inc dash" href="./images/dash.svg#icon-inc"></use>
+            </svg>
+          </li>
+          <li class="logo-list">
+            <svg width="231" height="24" class="logo-prod">
+              <use class="icon dash" href="./images/dash.svg#icon-prom"></use>
+            </svg>
+          </li>
+          <li class="logo-list">
+            <svg width="231" height="24" class="logo-prod">
+              <use class="icon dash" href="./images/dash.svg#icon-help"></use>
+            </svg>
+          </li>
+        </ul>
+        <div class="ava">
+          <img src="./images/ava.png" alt="">
+          <div>
+            <p class="ava-name">Evano</p>
+          <p class="ava-job">Project Manager</p>  
+          </div>
+          
+        </div>
+      </div>
+      
+    </nav>
+   
+</div>
 <div class="sideBar">
   <div class="logo">
     <svg width="37" height="39" class="logo-icon">
@@ -55,11 +121,4 @@
     
   </div>
 </div>
-<div class="burger-menu">
-    <div class="burger-icon">бургер</div> <!-- Додали текст "бургер" -->
-  </div>
-  <script>
-    document.querySelector('.burger-icon').addEventListener('click', function() {
-  document.querySelector('.sideBar').classList.toggle('show'); // Додаємо або видаляємо клас "show"
-});
-  </script>
+
